@@ -8,6 +8,7 @@ Other bugfixes
 
 - #4780: Induction with universe polymorphism on was creating ill-typed terms.
 - #4754: Regression in setoid_rewrite, allow postponed unification problems to remain.
+- #4769: Anomaly with universe polymorphic schemes defined inside sections.
 
 Changes from V8.5pl1 to V8.5pl2
 ===============================
